--- a/crafty.yaml
+++ b/crafty.yaml
@@ -1,2 +1,3 @@
 - name: "Shell command Crafty"
-  shell: cd /tmp && git clone https://gitlab.com/crafty-controller/crafty-installer-linux.git && cd crafty-installer-linux && sudo ./install_crafty.sh
+  shell: 
+    cmd: "cd /tmp && git clone https://gitlab.com/crafty-controller/crafty-installer-linux.git && cd crafty-installer-linux && sudo ./install_crafty.sh"
