--- a/crafty.yaml
+++ b/crafty.yaml
@@ -4,4 +4,4 @@
   tasks:
     - name: "Shell command Crafty"
       shell: 
-        cmd: "cd /tmp && git clone https://gitlab.com/crafty-controller/crafty-installer-linux.git && cd crafty-installer-linux && sudo ./install_crafty.sh"
+        cmd: "cd /tmp && git clone https://gitlab.com/crafty-controller/crafty-installer-4.0.git && cd crafty-installer-4.0 && sudo ./install_crafty.sh"
