--- a/installcrafty.yaml
+++ b/installcrafty.yaml
@@ -38,35 +38,48 @@
         msg: "{{ item }}"
       loop: "{{ install_output.stdout_lines }}"
 
-        - name: Aktivera och starta Crafty service
-          systemd:
-            name: crafty.service
-            enabled: yes
-            state: started
-            daemon_reload: yes
+    - name: Visa exit code
+      debug:
+        msg: "Installation exit code: {{ install_output.rc }}"
+      when: install_output.rc is defined
 
-        - name: Kontrollera status på Crafty service
-          systemd:
-            name: crafty.service
-          register: crafty_service_status
+    - name: Felsök om installationen misslyckades
+      debug:
+        msg: "Installationen misslyckades med exit code {{ install_output.rc }}. Kolla ovanstående output för detaljer."
+      when: install_output.rc != 0
 
-        - name: Visa Crafty service status
-          debug:
-            msg: "Crafty service status: {{ crafty_service_status.status }}"
+    - name: Aktivera och starta Crafty service
+      systemd:
+        name: crafty.service
+        enabled: yes
+        state: started
+        daemon_reload: yes
+      when: install_output.rc == 0
 
-        - name: Kontrollera om credentials-filen finns
-          stat:
-            path: /var/opt/minecraft/crafty/crafty-4/app/config/default-creds.txt
-          register: creds_file
+    - name: Kontrollera status på Crafty service
+      systemd:
+        name: crafty.service
+      register: crafty_service_status
+      when: install_output.rc == 0
 
-        - name: Läsa Crafty default credentials
-          slurp:
-            src: /var/opt/minecraft/crafty/crafty-4/app/config/default-creds.txt
-          register: crafty_creds
-          when: creds_file.stat.exists
+    - name: Visa Crafty service status
+      debug:
+        msg: "Crafty service status: {{ crafty_service_status.status }}"
+      when: install_output.rc == 0
 
-        - name: Visa Crafty credentials
-          debug:
-            msg: "Crafty Default Credentials:\n{{ crafty_creds.content | b64decode }}"
-          when: creds_file.stat.exists
-      when: install_result.rc == 0
+    - name: Kontrollera om credentials-filen finns
+      stat:
+        path: /var/opt/minecraft/crafty/crafty-4/app/config/default-creds.txt
+      register: creds_file
+      when: install_output.rc == 0
+
+    - name: Läsa Crafty default credentials
+      slurp:
+        src: /var/opt/minecraft/crafty/crafty-4/app/config/default-creds.txt
+      register: crafty_creds
+      when: creds_file.stat.exists and install_output.rc == 0
+
+    - name: Visa Crafty credentials
+      debug:
+        msg: "Crafty Default Credentials:\n{{ crafty_creds.content | b64decode }}"
+      when: creds_file.stat.exists and install_output.rc == 0
