--- a/installcrafty.yaml
+++ b/installcrafty.yaml
@@ -15,38 +15,22 @@
         clone: yes
         force: yes
 
-    - name: Installera Crafty Controller med detaljerad output
-      shell: |
-        cd /tmp/crafty-installer-4.0
-        {
-          echo "=== START INSTALLATION ==="
-          ./install_crafty.sh
-          echo "=== EXIT CODE: $? ==="
-        } <<EOF
-        y
-        y
-        y
-        master
-        y
-        EOF
-      args:
-        executable: /bin/bash
-      register: install_output
+    - name: Installera Crafty Controller med expect
+      expect:
+        command: ./install_crafty.sh
+        chdir: /tmp/crafty-installer-4.0
+        responses:
+          '(?i)proceed': 'y'
+          '(?i)default directory': 'y'
+          '(?i)create.*user': 'y'
+          '(?i)branch': 'master'
+          '(?i)start crafty': 'y'
+        timeout: 300
+      register: install_result
 
-    - name: Visa all output från installationen
+    - name: Visa installationsresultat
       debug:
-        msg: "{{ item }}"
-      loop: "{{ install_output.stdout_lines }}"
-
-    - name: Visa exit code
-      debug:
-        msg: "Installation exit code: {{ install_output.rc }}"
-      when: install_output.rc is defined
-
-    - name: Felsök om installationen misslyckades
-      debug:
-        msg: "Installationen misslyckades med exit code {{ install_output.rc }}. Kolla ovanstående output för detaljer."
-      when: install_output.rc != 0
+        var: install_result
 
     - name: Aktivera och starta Crafty service
       systemd:
@@ -54,32 +38,28 @@
         enabled: yes
         state: started
         daemon_reload: yes
-      when: install_output.rc == 0
 
     - name: Kontrollera status på Crafty service
       systemd:
         name: crafty.service
       register: crafty_service_status
-      when: install_output.rc == 0
 
     - name: Visa Crafty service status
       debug:
         msg: "Crafty service status: {{ crafty_service_status.status }}"
-      when: install_output.rc == 0
 
     - name: Kontrollera om credentials-filen finns
       stat:
         path: /var/opt/minecraft/crafty/crafty-4/app/config/default-creds.txt
       register: creds_file
-      when: install_output.rc == 0
 
     - name: Läsa Crafty default credentials
       slurp:
         src: /var/opt/minecraft/crafty/crafty-4/app/config/default-creds.txt
       register: crafty_creds
-      when: creds_file.stat.exists and install_output.rc == 0
+      when: creds_file.stat.exists
 
     - name: Visa Crafty credentials
       debug:
         msg: "Crafty Default Credentials:\n{{ crafty_creds.content | b64decode }}"
-      when: creds_file.stat.exists and install_output.rc == 0
+      when: creds_file.stat.exists
