--- a/NewUbuntu.yaml
+++ b/NewUbuntu.yaml
@@ -4,9 +4,9 @@
   gather_facts: false
   vars:
     # Proxmox connection settings - user comes from Semaphore
-    proxmox_host: "{{ semaphore_proxmox_host }}" 
-    proxmox_user: "{{ semaphore_proxmox_user }}"  # From Semaphore variable
-    proxmox_password: "{{ semaphore_proxmox_password }}"
+    proxmox_host: "{{ SEMAPHORE_PROXMOX_HOST }}" 
+    proxmox_user: "{{ SEMAPHORE_PROXMOX_USER }}"  # From Semaphore variable
+    proxmox_password: "{{ SEMAPHORE_PROXMOX_PASSWORD }}"
     validate_certs: false
     
     # VM configuration
