--- a/NewUbuntu.yaml
+++ b/NewUbuntu.yaml
@@ -12,7 +12,7 @@
     
     # VM configuration
     vm_name: "ubuntu-vm-01"
-    vm_id: 106
+    vm_id: 9999  # <--- BYTT FRÅN 106 TILL 9999
     template_vm_id: 105
     target_node: "pve"
     
