--- a/NewUbuntu.yaml
+++ b/NewUbuntu.yaml
@@ -13,7 +13,7 @@
     # VM configuration
     vm_name: "ubuntu-vm-01"
     vm_id: 9999
-    template_vm_id: 9000  # Prova detta ID
+    template_vm_id: 9000  # Prova detta ID först
     target_node: "pve"
     
     # Resource allocation
@@ -28,20 +28,6 @@
     - name: Display which user is being used
       debug:
         msg: "Using Proxmox user: {{ proxmox_user }}"
-    
-    - name: List all VMs to find available templates
-      community.general.proxmox_kvm:
-        api_host: "{{ proxmox_host }}"
-        api_user: "{{ proxmox_user }}"
-        api_password: "{{ proxmox_password }}"
-        validate_certs: "{{ validate_certs }}"
-        node: "{{ target_node }}"
-        state: current  # <--- BYTT FRÅN "list" TILL "current"
-      register: all_vms
-      
-    - name: Display available VMs and templates
-      debug:
-        msg: "Available VMs: {{ all_vms.vms }}"
         
     - name: Create Ubuntu VM by cloning template
       community.general.proxmox_kvm:
