--- a/NewUbuntu.yaml
+++ b/NewUbuntu.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Check if template 105 exists
+- name: Create Ubuntu VM from template in Proxmox
   hosts: localhost
   connection: local
   gather_facts: false
@@ -10,22 +10,40 @@
     validate_certs: false
     
   tasks:
-    - name: Get information about VM 105
+    - name: Clone template 105 to new VM
       community.general.proxmox_kvm:
         api_host: "{{ proxmox_host }}"
         api_user: "{{ proxmox_user }}"
         api_password: "{{ proxmox_password }}"
         validate_certs: "{{ validate_certs }}"
+        
         node: "pve"
-        vmid: 109
-        state: current
-      register: vm_info
-      ignore_errors: yes
+        vmid: 9999
+        clone: 105
+        name: "ubuntu-test-ansible"
+        full: yes
+        state: present  # <--- BYTT FRÅN "started" TILL "present"
+        
+      register: clone_result
 
-    - name: Display VM 105 info
+    - name: Display clone result
       debug:
-        var: vm_info
+        var: clone_result
 
-    - name: Check template status
+    - name: Start the cloned VM
+      community.general.proxmox_kvm:
+        api_host: "{{ proxmox_host }}"
+        api_user: "{{ proxmox_user }}"
+        api_password: "{{ proxmox_password }}"
+        validate_certs: "{{ validate_certs }}"
+        
+        node: "pve"
+        vmid: 9999
+        state: started
+        
+      register: start_result
+      when: clone_result is succeeded
+
+    - name: Display start result
       debug:
-        msg: "VM 105 exists: {{ vm_info is succeeded }}"
+        var: start_result
